Lab2/Code/syntax.output
语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec SEMI
    7       | Specifier FunDec CompSt

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList
   10           | VarDec error ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag

   15 OptTag: ID
   16       | %empty

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB
   20       | VarDec LB error RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP
   23       | error RP

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec

   26 ParamDec: Specifier VarDec
   27         | error COMMA

   28 CompSt: LC DefList StmtList RC

   29 StmtList: Stmt StmtList
   30         | %empty

   31 Stmt: Exp SEMI
   32     | CompSt
   33     | RETURN Exp SEMI
   34     | IF LP Exp RP Stmt
   35     | IF LP Exp RP Stmt ELSE Stmt
   36     | WHILE LP Exp RP Stmt
   37     | Exp error
   38     | error SEMI
   39     | RETURN Exp error
   40     | WHILE error RP
   41     | WHILE error RC

   42 DefList: Def DefList
   43        | %empty

   44 Def: Specifier DecList SEMI

   45 DecList: Dec
   46        | Dec COMMA DecList
   47        | Dec error DecList

   48 Dec: VarDec
   49    | VarDec ASSIGNOP Exp
   50    | VarDec ASSIGNOP error SEMI

   51 Exp: Exp ASSIGNOP Exp
   52    | Exp AND Exp
   53    | Exp OR Exp
   54    | Exp RELOP Exp
   55    | Exp PLUS Exp
   56    | Exp MINUS Exp
   57    | Exp STAR Exp
   58    | Exp DIV Exp
   59    | LP Exp RP
   60    | MINUS Exp
   61    | NOT Exp
   62    | ID LP Args RP
   63    | ID LP RP
   64    | Exp LB Exp RB
   65    | Exp DOT ID
   66    | ID
   67    | INT
   68    | FLOAT
   69    | Exp ASSIGNOP error
   70    | Exp AND error
   71    | Exp OR error
   72    | Exp RELOP error
   73    | Exp PLUS error
   74    | Exp MINUS error
   75    | Exp STAR error
   76    | Exp DIV error
   77    | MINUS error
   78    | NOT error
   79    | STAR DIV error
   80    | Exp LB error RB
   81    | Exp LB error SEMI

   82 Args: Exp COMMA Args
   83     | Exp
   84     | error COMMA


Terminals, with rules where they appear

$end (0) 0
error (256) 10 20 23 27 37 38 39 40 41 47 50 69 70 71 72 73 74 75 76
    77 78 79 80 81 84
INT (258) 19 67
FLOAT (259) 68
ID (260) 15 17 18 21 22 62 63 65 66
SEMI (261) 4 5 6 31 33 38 44 50 81
COMMA (262) 9 24 27 46 82 84
ASSIGNOP (263) 49 50 51 69
RELOP (264) 54 72
PLUS (265) 55 73
MINUS (266) 56 60 74 77
STAR (267) 57 75 79
DIV (268) 58 76 79
AND (269) 52 70
OR (270) 53 71
NOT (271) 61 78
DOT (272) 65
TYPE (273) 11
LP (274) 21 22 34 35 36 59 62 63
RP (275) 21 22 23 34 35 36 40 59 62 63
LB (276) 19 20 64 80 81
RB (277) 19 20 64 80
LC (278) 13 28
RC (279) 13 28 41
STRUCT (280) 13 14
RETURN (281) 33 39
IF (282) 34 35
ELSE (283) 35
WHILE (284) 36 40 41
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    左： 0
Program (32)
    左： 1, 右： 0
ExtDefList (33)
    左： 2 3, 右： 1 2
ExtDef (34)
    左： 4 5 6 7, 右： 2
ExtDecList (35)
    左： 8 9 10, 右： 4 9 10
Specifier (36)
    左： 11 12, 右： 4 5 6 7 26 44
StructSpecifier (37)
    左： 13 14, 右： 12
OptTag (38)
    左： 15 16, 右： 13
Tag (39)
    左： 17, 右： 14
VarDec (40)
    左： 18 19 20, 右： 8 9 10 19 20 26 48 49 50
FunDec (41)
    左： 21 22 23, 右： 6 7
VarList (42)
    左： 24 25, 右： 21 24
ParamDec (43)
    左： 26 27, 右： 24 25
CompSt (44)
    左： 28, 右： 7 32
StmtList (45)
    左： 29 30, 右： 28 29
Stmt (46)
    左： 31 32 33 34 35 36 37 38 39 40 41, 右： 29 34 35 36
DefList (47)
    左： 42 43, 右： 13 28 42
Def (48)
    左： 44, 右： 42
DecList (49)
    左： 45 46 47, 右： 44 46 47
Dec (50)
    左： 48 49 50, 右： 45 46 47
Exp (51)
    左： 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
    70 71 72 73 74 75 76 77 78 79 80 81, 右： 31 33 34 35 36 37 39
    49 51 52 53 54 55 56 57 58 59 60 61 64 65 69 70 71 72 73 74 75
    76 80 81 82 83
Args (52)
    左： 82 83 84, 右： 62 82


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          转到状态 3
    ExtDefList       转到状态 4
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 1

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 2

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 16 (OptTag)

    OptTag  转到状态 9
    Tag     转到状态 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       转到状态 12
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec SEMI
    7       | Specifier . FunDec CompSt

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  转到状态 16
    VarDec      转到状态 17
    FunDec      转到状态 18


State 7

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 8

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 9

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


State 10

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  接受


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

   23 FunDec: error . RP

    RP  shift, and go to state 20


State 14

   18 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP

    LP  shift, and go to state 21

    $default  reduce using rule 18 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 22


State 17

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   10           | VarDec . error ExtDecList
   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB

    error  shift, and go to state 23
    COMMA  shift, and go to state 24
    LB     shift, and go to state 25

    SEMI  reduce using rule 8 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . SEMI
    7       | Specifier FunDec . CompSt

    SEMI  shift, and go to state 26
    LC    shift, and go to state 27

    CompSt  转到状态 28


State 19

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 43 (DefList)

    Specifier        转到状态 29
    StructSpecifier  转到状态 7
    DefList          转到状态 30
    Def              转到状态 31


State 20

   23 FunDec: error RP .

    $default  reduce using rule 23 (FunDec)


State 21

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP

    error   shift, and go to state 32
    TYPE    shift, and go to state 1
    RP      shift, and go to state 33
    STRUCT  shift, and go to state 2

    Specifier        转到状态 34
    StructSpecifier  转到状态 7
    VarList          转到状态 35
    ParamDec         转到状态 36


State 22

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 23

   10 ExtDecList: VarDec error . ExtDecList

    ID  shift, and go to state 37

    ExtDecList  转到状态 38
    VarDec      转到状态 17


State 24

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 37

    ExtDecList  转到状态 39
    VarDec      转到状态 17


State 25

   19 VarDec: VarDec LB . INT RB
   20       | VarDec LB . error RB

    error  shift, and go to state 40
    INT    shift, and go to state 41


State 26

    6 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 6 (ExtDef)


State 27

   28 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 43 (DefList)

    Specifier        转到状态 29
    StructSpecifier  转到状态 7
    DefList          转到状态 42
    Def              转到状态 31


State 28

    7 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 7 (ExtDef)


State 29

   44 Def: Specifier . DecList SEMI

    ID  shift, and go to state 37

    VarDec   转到状态 43
    DecList  转到状态 44
    Dec      转到状态 45


State 30

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 46


State 31

   42 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 43 (DefList)

    Specifier        转到状态 29
    StructSpecifier  转到状态 7
    DefList          转到状态 47
    Def              转到状态 31


State 32

   27 ParamDec: error . COMMA

    COMMA  shift, and go to state 48


State 33

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


State 34

   26 ParamDec: Specifier . VarDec

    ID  shift, and go to state 37

    VarDec  转到状态 49


State 35

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 50


State 36

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .

    COMMA  shift, and go to state 51

    $default  reduce using rule 25 (VarList)


State 37

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 38

   10 ExtDecList: VarDec error ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 39

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 40

   20 VarDec: VarDec LB error . RB

    RB  shift, and go to state 52


State 41

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 53


State 42

   28 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    ID      shift, and go to state 57
    MINUS   shift, and go to state 58
    STAR    shift, and go to state 59
    NOT     shift, and go to state 60
    LP      shift, and go to state 61
    LC      shift, and go to state 27
    RETURN  shift, and go to state 62
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64

    RC  reduce using rule 30 (StmtList)

    CompSt    转到状态 65
    StmtList  转到状态 66
    Stmt      转到状态 67
    Exp       转到状态 68


State 43

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   48 Dec: VarDec .
   49    | VarDec . ASSIGNOP Exp
   50    | VarDec . ASSIGNOP error SEMI

    ASSIGNOP  shift, and go to state 69
    LB        shift, and go to state 25

    $default  reduce using rule 48 (Dec)


State 44

   44 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 70


State 45

   45 DecList: Dec .
   46        | Dec . COMMA DecList
   47        | Dec . error DecList

    error  shift, and go to state 71
    COMMA  shift, and go to state 72

    SEMI  reduce using rule 45 (DecList)


State 46

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 47

   42 DefList: Def DefList .

    $default  reduce using rule 42 (DefList)


State 48

   27 ParamDec: error COMMA .

    $default  reduce using rule 27 (ParamDec)


State 49

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   26 ParamDec: Specifier VarDec .

    LB  shift, and go to state 25

    $default  reduce using rule 26 (ParamDec)


State 50

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


State 51

   24 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 32
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        转到状态 34
    StructSpecifier  转到状态 7
    VarList          转到状态 73
    ParamDec         转到状态 36


State 52

   20 VarDec: VarDec LB error RB .

    $default  reduce using rule 20 (VarDec)


State 53

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


State 54

   38 Stmt: error . SEMI

    SEMI  shift, and go to state 74


State 55

   67 Exp: INT .

    $default  reduce using rule 67 (Exp)


State 56

   68 Exp: FLOAT .

    $default  reduce using rule 68 (Exp)


State 57

   62 Exp: ID . LP Args RP
   63    | ID . LP RP
   66    | ID .

    LP  shift, and go to state 75

    $default  reduce using rule 66 (Exp)


State 58

   60 Exp: MINUS . Exp
   77    | MINUS . error

    error  shift, and go to state 76
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    STAR   shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 77


State 59

   79 Exp: STAR . DIV error

    DIV  shift, and go to state 78


State 60

   61 Exp: NOT . Exp
   78    | NOT . error

    error  shift, and go to state 79
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    STAR   shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 80


State 61

   59 Exp: LP . Exp RP

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    STAR   shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 81


State 62

   33 Stmt: RETURN . Exp SEMI
   39     | RETURN . Exp error

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    STAR   shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 82


State 63

   34 Stmt: IF . LP Exp RP Stmt
   35     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 83


State 64

   36 Stmt: WHILE . LP Exp RP Stmt
   40     | WHILE . error RP
   41     | WHILE . error RC

    error  shift, and go to state 84
    LP     shift, and go to state 85


State 65

   32 Stmt: CompSt .

    $default  reduce using rule 32 (Stmt)


State 66

   28 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 86


State 67

   29 StmtList: Stmt . StmtList

    error   shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    ID      shift, and go to state 57
    MINUS   shift, and go to state 58
    STAR    shift, and go to state 59
    NOT     shift, and go to state 60
    LP      shift, and go to state 61
    LC      shift, and go to state 27
    RETURN  shift, and go to state 62
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64

    RC  reduce using rule 30 (StmtList)

    CompSt    转到状态 65
    StmtList  转到状态 87
    Stmt      转到状态 67
    Exp       转到状态 68


State 68

   31 Stmt: Exp . SEMI
   37     | Exp . error
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . ASSIGNOP error
   70    | Exp . AND error
   71    | Exp . OR error
   72    | Exp . RELOP error
   73    | Exp . PLUS error
   74    | Exp . MINUS error
   75    | Exp . STAR error
   76    | Exp . DIV error
   80    | Exp . LB error RB
   81    | Exp . LB error SEMI

    error     shift, and go to state 88
    SEMI      shift, and go to state 89
    ASSIGNOP  shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    AND       shift, and go to state 96
    OR        shift, and go to state 97
    DOT       shift, and go to state 98
    LB        shift, and go to state 99


State 69

   49 Dec: VarDec ASSIGNOP . Exp
   50    | VarDec ASSIGNOP . error SEMI

    error  shift, and go to state 100
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    STAR   shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 101


State 70

   44 Def: Specifier DecList SEMI .

    $default  reduce using rule 44 (Def)


State 71

   47 DecList: Dec error . DecList

    ID  shift, and go to state 37

    VarDec   转到状态 43
    DecList  转到状态 102
    Dec      转到状态 45


State 72

   46 DecList: Dec COMMA . DecList

    ID  shift, and go to state 37

    VarDec   转到状态 43
    DecList  转到状态 103
    Dec      转到状态 45


State 73

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


State 74

   38 Stmt: error SEMI .

    $default  reduce using rule 38 (Stmt)


State 75

   62 Exp: ID LP . Args RP
   63    | ID LP . RP

    error  shift, and go to state 104
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    STAR   shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    RP     shift, and go to state 105

    Exp   转到状态 106
    Args  转到状态 107


State 76

   77 Exp: MINUS error .

    $default  reduce using rule 77 (Exp)


State 77

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   60    | MINUS Exp .
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . ASSIGNOP error
   70    | Exp . AND error
   71    | Exp . OR error
   72    | Exp . RELOP error
   73    | Exp . PLUS error
   74    | Exp . MINUS error
   75    | Exp . STAR error
   76    | Exp . DIV error
   80    | Exp . LB error RB
   81    | Exp . LB error SEMI

    STAR  shift, and go to state 94
    DIV   shift, and go to state 95
    DOT   shift, and go to state 98
    LB    shift, and go to state 99

    $default  reduce using rule 60 (Exp)


State 78

   79 Exp: STAR DIV . error

    error  shift, and go to state 108


State 79

   78 Exp: NOT error .

    $default  reduce using rule 78 (Exp)


State 80

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   61    | NOT Exp .
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . ASSIGNOP error
   70    | Exp . AND error
   71    | Exp . OR error
   72    | Exp . RELOP error
   73    | Exp . PLUS error
   74    | Exp . MINUS error
   75    | Exp . STAR error
   76    | Exp . DIV error
   80    | Exp . LB error RB
   81    | Exp . LB error SEMI

    DOT  shift, and go to state 98
    LB   shift, and go to state 99

    $default  reduce using rule 61 (Exp)


State 81

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   59    | LP Exp . RP
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . ASSIGNOP error
   70    | Exp . AND error
   71    | Exp . OR error
   72    | Exp . RELOP error
   73    | Exp . PLUS error
   74    | Exp . MINUS error
   75    | Exp . STAR error
   76    | Exp . DIV error
   80    | Exp . LB error RB
   81    | Exp . LB error SEMI

    ASSIGNOP  shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    AND       shift, and go to state 96
    OR        shift, and go to state 97
    DOT       shift, and go to state 98
    RP        shift, and go to state 109
    LB        shift, and go to state 99


State 82

   33 Stmt: RETURN Exp . SEMI
   39     | RETURN Exp . error
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . ASSIGNOP error
   70    | Exp . AND error
   71    | Exp . OR error
   72    | Exp . RELOP error
   73    | Exp . PLUS error
   74    | Exp . MINUS error
   75    | Exp . STAR error
   76    | Exp . DIV error
   80    | Exp . LB error RB
   81    | Exp . LB error SEMI

    error     shift, and go to state 110
    SEMI      shift, and go to state 111
    ASSIGNOP  shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    AND       shift, and go to state 96
    OR        shift, and go to state 97
    DOT       shift, and go to state 98
    LB        shift, and go to state 99


State 83

   34 Stmt: IF LP . Exp RP Stmt
   35     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    STAR   shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 112


State 84

   40 Stmt: WHILE error . RP
   41     | WHILE error . RC

    RP  shift, and go to state 113
    RC  shift, and go to state 114


State 85

   36 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    STAR   shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 115


State 86

   28 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 28 (CompSt)


State 87

   29 StmtList: Stmt StmtList .

    $default  reduce using rule 29 (StmtList)


State 88

   37 Stmt: Exp error .

    $default  reduce using rule 37 (Stmt)


State 89

   31 Stmt: Exp SEMI .

    $default  reduce using rule 31 (Stmt)


State 90

   51 Exp: Exp ASSIGNOP . Exp
   69    | Exp ASSIGNOP . error

    error  shift, and go to state 116
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    STAR   shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 117


State 91

   54 Exp: Exp RELOP . Exp
   72    | Exp RELOP . error

    error  shift, and go to state 118
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    STAR   shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 119


State 92

   55 Exp: Exp PLUS . Exp
   73    | Exp PLUS . error

    error  shift, and go to state 120
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    STAR   shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 121


State 93

   56 Exp: Exp MINUS . Exp
   74    | Exp MINUS . error

    error  shift, and go to state 122
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    STAR   shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 123


State 94

   57 Exp: Exp STAR . Exp
   75    | Exp STAR . error

    error  shift, and go to state 124
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    STAR   shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 125


State 95

   58 Exp: Exp DIV . Exp
   76    | Exp DIV . error

    error  shift, and go to state 126
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    STAR   shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 127


State 96

   52 Exp: Exp AND . Exp
   70    | Exp AND . error

    error  shift, and go to state 128
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    STAR   shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 129


State 97

   53 Exp: Exp OR . Exp
   71    | Exp OR . error

    error  shift, and go to state 130
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    STAR   shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 131


State 98

   65 Exp: Exp DOT . ID

    ID  shift, and go to state 132


State 99

   64 Exp: Exp LB . Exp RB
   80    | Exp LB . error RB
   81    | Exp LB . error SEMI

    error  shift, and go to state 133
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    STAR   shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  转到状态 134


State 100

   50 Dec: VarDec ASSIGNOP error . SEMI

    SEMI  shift, and go to state 135


State 101

   49 Dec: VarDec ASSIGNOP Exp .
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . ASSIGNOP error
   70    | Exp . AND error
   71    | Exp . OR error
   72    | Exp . RELOP error
   73    | Exp . PLUS error
   74    | Exp . MINUS error
   75    | Exp . STAR error
   76    | Exp . DIV error
   80    | Exp . LB error RB
   81    | Exp . LB error SEMI

    ASSIGNOP  shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    AND       shift, and go to state 96
    OR        shift, and go to state 97
    DOT       shift, and go to state 98
    LB        shift, and go to state 99

    $default  reduce using rule 49 (Dec)


State 102

   47 DecList: Dec error DecList .

    $default  reduce using rule 47 (DecList)


State 103

   46 DecList: Dec COMMA DecList .

    $default  reduce using rule 46 (DecList)


State 104

   84 Args: error . COMMA

    COMMA  shift, and go to state 136


State 105

   63 Exp: ID LP RP .

    $default  reduce using rule 63 (Exp)


State 106

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . ASSIGNOP error
   70    | Exp . AND error
   71    | Exp . OR error
   72    | Exp . RELOP error
   73    | Exp . PLUS error
   74    | Exp . MINUS error
   75    | Exp . STAR error
   76    | Exp . DIV error
   80    | Exp . LB error RB
   81    | Exp . LB error SEMI
   82 Args: Exp . COMMA Args
   83     | Exp .

    COMMA     shift, and go to state 137
    ASSIGNOP  shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    AND       shift, and go to state 96
    OR        shift, and go to state 97
    DOT       shift, and go to state 98
    LB        shift, and go to state 99

    $default  reduce using rule 83 (Args)


State 107

   62 Exp: ID LP Args . RP

    RP  shift, and go to state 138


State 108

   79 Exp: STAR DIV error .

    $default  reduce using rule 79 (Exp)


State 109

   59 Exp: LP Exp RP .

    $default  reduce using rule 59 (Exp)


State 110

   39 Stmt: RETURN Exp error .

    $default  reduce using rule 39 (Stmt)


State 111

   33 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 33 (Stmt)


State 112

   34 Stmt: IF LP Exp . RP Stmt
   35     | IF LP Exp . RP Stmt ELSE Stmt
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . ASSIGNOP error
   70    | Exp . AND error
   71    | Exp . OR error
   72    | Exp . RELOP error
   73    | Exp . PLUS error
   74    | Exp . MINUS error
   75    | Exp . STAR error
   76    | Exp . DIV error
   80    | Exp . LB error RB
   81    | Exp . LB error SEMI
